samples/_failures_safe/1761792153_e7ad48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0c2d7b0.c: In function ‘main’:
./samples/SAFE/__tmp_b0c2d7b0.c:151:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  151 |             int matrix2
      |             ^~~
./samples/SAFE/__tmp_b0c2d7b0.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0c2d7b0.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0c2d7b0.c:151:13: error: expected declaration or statement at end of input
